--- a/app/views/pages/mentionslegales.html.erb
+++ b/app/views/pages/mentionslegales.html.erb
@@ -1,4 +1,10 @@
 <style>
+  h2{
+    margin-top: 48px;
+  }
+   .grid-1{
+    padding-bottom: 64px;
+   }
   .grid-1 p{
     color:#8D9299;
     font-size: 18px;
@@ -61,38 +67,64 @@
   <h1>Mentions légales</h1>
 </section>
 <section class="grid-1">
+  <p>Conformément aux dispositions des articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique (L.C.E.N.), il est porté à la connaissance des utilisateurs et visiteurs du site <a href="https://omniscientdesign.fr" class="black" target="_blank">https://omniscientdesign.fr</a>, ci-après dénommé "le Site", les présentes mentions légales.
+    <br>
+    La connexion et la navigation sur le Site par tout utilisateur, ci-après dénommé "l'Utilisateur", impliquent l'acceptation pleine et entière des présentes mentions légales. Ces dernières sont accessibles à tout moment dans la rubrique « Mentions légales » du Site.
+  </p>
   <h2>1 - Informations légales</h2>
-  <p>Nom de l'entreprise : <br>
-    Forme juridique :  Le siret est :  <br>
-    Le Propriétaire est :  <br>
-    Adresse postale du propriétaire : <br>
+  <p>
+    <span class="black medium">Propriétaire du site :</span> <br>
     <br>
-    Le Responsable de la publication est :  <br>
-    Numéro de téléphone du responsable de la publication : <br>
-    Adresse e-mail du responsable de la publication :</p>
+    Nom et prénom du propriétaire : QUEMERE Edgar<br>
+    Adresse du propriétaire : <br>
+    Adresse email : <br>
+    Numéro de téléphone : 06 95 81 77 27<br>
+    <br>
+    <span class="black medium">Responsable de la publication :</span> <br>
+    <br>
+    Nom et prénom : QUEMERE Edgar<br>
+    Numéro de téléphone : 06 95 81 77 27<br>
+    Adresse email :
+  </p>
   <h2>2 - Hébergement</h2>
-  <p>Hostinger <br>
-    Hostinger International Ltd <br>
-    dont le siège social est situé  61 Lordou Vironos str., 6023 Larnaca, Cyprus<br>
+  <p>
+    Le site est hébergé par :<br>
+    <span class="black medium">Hostinger International Ltd</span><br>
+    Siège social : 61 Lordou Vironos str., 6023 Larnaca, Chypre<br>
+    Contact : <a href="mailto:fr@hostinger.com" class="black">fr@hostinger.com</a><br>
+    Site web : <a href="https://www.hostinger.fr/" class="black" target="_blank">https://www.hostinger.fr</a>
+  </p>
+  <h2>3 - Principe général</h2>
+  <p>
+    Est considéré comme Utilisateur toute personne accédant au site <a href="https://omniscientdesign.fr" class="black" target="_blank">omniscientdesign.fr</a> et l’utilisant.
     <br>
-    Contactez l’Hébergeur : <a href="mailto:fr@hostinger.com" class="black">fr@hostinger.com</a><br>
-    <a href="https://www.hostinger.fr/" class="black" target="_blank">https://www.hostinger.fr/</a></p>
-  <h2>3 - Principe</h2>
-  <p>Est désigné Utilisateur, tout personne se connectant et utilisant le site susnommé : <span class="black">lien</span>.<br>
-    Le site <span class="black">lien</span> est mis à jour régulièrement par Nom Prénom.<br>
-    Thomas Riquier s’efforce de fournir sur le site lien des informations les plus précises possibles (sous réserve de modifications apportées depuis leur mise en ligne), mais ne saurait garantir l'exactitude, la complétude et l'actualité des informations diffusées sur son site, qu’elles soient de son fait ou du fait des tiers partenaires qui lui fournissent ces informations. En conséquence, l'utilisateur reconnaît utiliser ces informations données (à titre indicatif, non exhaustives et susceptibles d'évoluer) sous sa responsabilité exclusive.</p>
+    <br>
+    Le Site est régulièrement mis à jour par QUEMERE Edgar. QUEMERE Edgar s'efforce de fournir des informations aussi précises que possible sur le Site. Toutefois, il ne peut garantir l'exactitude, la complétude ou l'actualité des informations publiées, qu'elles soient de son fait ou fournies par des partenaires tiers. Par conséquent, l'Utilisateur reconnaît utiliser ces informations à titre indicatif, sous sa responsabilité exclusive.
+  </p>
   <h2>4 -  Accès au site</h2>
-  <p>Le site viturna.fr est accessible aux utilisateurs 24/24h, 7/7j, sauf interruption, programmée ou non, pour les besoins de sa maintenance ou en cas de force majeure. <br>
-    <br>
-    En cas d’impossibilité d’accès au service, viturna.fr s’engage à faire son maximum afin de rétablir l’accès au service et s’efforcera alors de communiquer préalablement aux utilisateurs les dates et heures de l’intervention. viturna.fr ne saurait être tenu pour responsable de tout dommage résultant d’une indisponibilité du service.</p>
+  <p>
+    Le site <a href="https://omniscientdesign.fr" class="black" target="_blank">omniscientdesign.fr</a> est accessible 24 heures sur 24, 7 jours sur 7, sauf en cas d'interruption pour des besoins de maintenance ou de force majeure. En cas d'indisponibilité du service, omniscientdesign.fr s'efforcera de rétablir l'accès au plus vite et de communiquer à l'avance aux utilisateurs les dates et heures de l'intervention. Le site ne saurait être tenu pour responsable de tout dommage résultant d'une indisponibilité du service.
+  </p>
   <h2>5 -  Propriété Intellectuelle</h2>
-  <P>Tous les contenus présents sur ce site, y compris les textes, les images, les vidéos et les créations graphiques, sont la propriété intellectuelle de Riquier Thomas, sauf indication contraire. Toute utilisation non autorisée de ces contenus sans permission écrite préalable est strictement interdite.</P>
-  <h2>6 -  Protection des Données Personnelles</h2>
-  <p>Nous recueillons et utilisons vos données personnelles uniquement dans le but de répondre à vos demandes et de fournir nos services. Vos informations ne seront pas vendues, louées ou partagées avec des tiers sans votre consentement. Pour plus d'informations sur la collecte et l'utilisation des données, veuillez consulter notre Politique de Confidentialité.</p>
-  <h2>7 - Liens Externes</h2>
-  <p>Ce site peut contenir des liens vers des sites web externes. Nous ne sommes pas responsables du contenu ou de la politique de confidentialité de ces sites tiers. L'utilisation de liens externes se fait à vos propres risques.</p>
-  <h2>8 - Contact</h2>
-  <p>Pour toute question ou préoccupation concernant ces mentions légales, veuillez nous contacter à l'adresse suivante : <span class="black">contact@viturna.fr</span> .</p>
-  <h2>Modification des Mentions Légales </h2>
+  <p>
+    Tous les contenus présents sur le site <a href="https://omniscientdesign.fr" class="black" target="_blank">https://omniscientdesign.fr</a>, y compris les textes, images, vidéos, créations graphiques, ainsi que les œuvres et références soumises par les utilisateurs, sont protégés par les lois relatives à la propriété intellectuelle. L'Éditeur est propriétaire des droits de propriété intellectuelle sur les éléments originaux du Site, à l'exception des contenus fournis par les utilisateurs.
+    <br>
+    <br>
+    Les utilisateurs peuvent soumettre leurs propres œuvres et références sur le Site, à condition que ces contenus soient libres de droits et ne violent pas les droits d'auteur ou autres droits de propriété intellectuelle de tiers. En soumettant des œuvres et références, les utilisateurs accordent à l'Éditeur une licence non exclusive, gratuite, et valable pour toute la durée de protection des droits d'auteur, permettant l'utilisation, la reproduction, l'affichage, la diffusion, et la modification de ces contenus dans le cadre du fonctionnement et de la promotion du Site.
+    <br>
+    <br>
+    Toute utilisation des contenus soumis par les utilisateurs au-delà des besoins de fonctionnement du Site nécessitera une autorisation écrite préalable de l'utilisateur concerné.
+  </p>
+  <h2>6 - Liens externes</h2>
+  <p>
+    Le Site peut contenir des liens vers des sites web externes. <a href="https://omniscientdesign.fr" class="black" target="_blank">omniscientdesign.fr</a> ne peut être tenu responsable du contenu de ces sites tiers ni de leurs pratiques en matière de confidentialité. L'Utilisateur accède à ces liens externes à ses propres risques.
+  </p>
+  <h2>7 - Responsabilité des Contenus Utilisateurs </h2>
+  <p>
+    QUEMERE Edgar ne saurait être tenu responsable des contenus publiés par les utilisateurs. En cas de violation de droits de tiers par un utilisateur, celui-ci s'engage à indemniser QUEMERE Edgar pour tout dommage résultant de cette violation.
+  </p>
+  <h2>8 - Modifications des mentions légales</h2>
   <p>Nous nous réservons le droit de modifier ces mentions légales à tout moment. Toute modification prendra effet dès sa publication sur ce site.</p>
+  <h2>9 - Contact</h2>
+  <p>Pour toute question ou remarque concernant ces mentions légales, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>.</p>
 </section>
