--- a/app/views/pages/politiquedeconfidentialite.html.erb
+++ b/app/views/pages/politiquedeconfidentialite.html.erb
@@ -1,4 +1,10 @@
 <style>
+  h2{
+    margin-top: 48px;
+  }
+  .grid-1{
+    padding-bottom: 64px;
+  }
   .grid-1 p{
     color:#8D9299;
     font-size: 18px;
@@ -11,52 +17,52 @@
     font-weight: 300;
     margin-top: 16px;
   }
-  @media screen and (min-width:0px) and (max-width:349px) {
-    .grid-1{
-      padding: 0 5vw;
-      padding-bottom: 45px;
-    }
-
-    .top-default-page svg{
-      scale: 0.8;
-    }
-    h2{
-      margin-top: 48px;
-      font-size: 16px;
-      margin-bottom: 18px;
-    }
-    .grid-1 p{
-      font-size: 14px;
-    }
-  }
-  @media screen and (min-width:350px) and (max-width:800px) {
-    .grid-1{
-      padding: 0 5vw;
-      padding-bottom: 45px;
-    }
-    h2{
-      margin-top: 48px;
-      font-size: 18px;
-      margin-bottom: 18px;
-    }
-    .grid-1 p{
-      font-size: 16px;
-    }
-
-  }
-  @media screen and (min-width:801px) and (max-width:1200px) {
-   .grid-1{
+    @media screen and (min-width:0px) and (max-width:349px) {
+  .grid-1{
     padding: 0 5vw;
-    }
-    h2{
-      margin-top: 52px;
-      font-size: 20px;
-    }
-    .grid-1 p{
-      font-size: 17px;
-      line-height:130%;
-    }
+    padding-bottom: 45px;
   }
+
+  .top-default-page svg{
+    scale: 0.8;
+  }
+  h2{
+    margin-top: 48px;
+    font-size: 16px;
+    margin-bottom: 18px;
+  }
+  .grid-1 p{
+    font-size: 14px;
+  }
+    }
+    @media screen and (min-width:350px) and (max-width:800px) {
+  .grid-1{
+    padding: 0 5vw;
+    padding-bottom: 45px;
+  }
+  h2{
+    margin-top: 48px;
+    font-size: 18px;
+    margin-bottom: 18px;
+  }
+  .grid-1 p{
+    font-size: 16px;
+  }
+
+    }
+    @media screen and (min-width:801px) and (max-width:1200px) {
+     .grid-1{
+  padding: 0 5vw;
+  }
+  h2{
+    margin-top: 52px;
+    font-size: 20px;
+  }
+  .grid-1 p{
+    font-size: 17px;
+    line-height:130%;
+  }
+    }
 </style>
 <section class="top-default-page">
   <%= link_to root_path do %>
@@ -67,46 +73,98 @@
   <h1>Politique de confidentialité</h1>
 </section>
 <section class="grid-1">
-  <p>La présente politique de confidentialité a pour but d'exposer aux utilisateurs du site :
+  <p class="black medium">Dernière mise à jour : 26/08/2024</p>
+  <p style="margin-top:24px">La présente politique de confidentialité a pour but d’informer les utilisateurs du site :<br>
+    &nbsp;• Sur la manière dont sont collectées leurs données personnelles. Sont considérées comme des données personnelles, toute information permettant d’identifier un utilisateur. A ce titre, il peut s’agir : de ses noms et prénoms, de son âge, de son adresse postale ou email, de sa localisation ou encore de son adresse IP (liste non-exhaustive) ;<br>
+    &nbsp;• Sur les droits dont ils disposent concernant ces données ;<br>
+    &nbsp;• Sur la personne responsable du traitement des données à caractère personnel collectées et traitées ;<br>
+    &nbsp;• Sur les destinataires de ces données personnelles ;<br>
+    &nbsp;• Sur la politique du site en matière de cookies.<br>
     <br>
-    <br>
-    La manière dont sont collectées et traitées leurs données à caractère personnel. Doivent être considérées comme données personnelles toutes les données étant susceptibles d'identifier un utilisateur. Il s'agit notamment du prénom et du nom, de l'âge, de l'adresse postale, l'adresse mail, la localisation de l'utilisateur ou encore son adresse IP ;<br>
-    Quels sont les droits des utilisateurs concernant ces données ;<br>
-    Qui est responsable du traitement des données à caractère personnel collectées et traitées ;<br>
-    A qui ces données sont transmises ;<br>
-    Eventuellement, la politique du site en matière de fichiers "cookies".<br>
-    <br>
-    Cette politique de confidentialité complète les mentions légales que les utilisateurs peuvent consulter à l'adresse ci-après : </p>
-  <h2>1 -  Collecte et Utilisation des Données Personnelles </h2>
-  <p>Lorsque vous visitez notre site web, nous pouvons recueillir certaines informations personnelles que vous choisissez de nous fournir volontairement :    <br>
-    Via notre formulaire de contact. Ces informations peuvent inclure votre nom, votre adresse email, votre numéro de téléphone. Elles doivent être obligatoirement renseignées afin de pouvoir vous recontacter pour répondre à votre demande. A défaut, l’envoi du formulaire de contact sera impossible. Viturna sera également à même de traiter toute autre donnée personnelle que l’Utilisateur aura choisi de lui communiquer de manière délibérée, lors de leurs échanges.    <br>
-    Vos informations seront conservées trois ans à compter du dernier contact, avant suppression.    <br>
-    Via le formulaire d’inscription. Pour toute demande d’inscription réalisée via le formulaire disponible sur la page https://viturna.fr/inscription afin d’accéder à notre espace membre, l’Utilisateur donne son consentement à Viturna, via une case à cocher, pour qu’il traite les données personnelles suivantes : l’adresse email, le prénom, le nom, le numéro de téléphone    <br>
-    Vos informations seront conservées 12 mois.    <br>
-    <br>
-    Nous pouvons également recueillir certaines informations de manière automatique via les cookies    <br>
-    En outre, nous pouvons recevoir et enregistrer automatiquement des informations à partir de votre ordinateur et navigateur, y compris votre adresse IP et la page que vous demandez selon vos préférences cookies que vous avez sélectionné via notre bandeau.    <br>
-    Nous utilisons ces informations pour répondre à vos demandes et pour fournir nos services de conception web ainsi que pour vous permettre d’accéder à notre espace membre. Vos données personnelles ne seront pas vendues, louées ou partagées avec des tiers sans votre consentement. Sauf dans les cas suivants : si la loi l’exige, si elle est requise pour toute procédure judiciaire, pour prouver ou protéger nos droits légaux.</p>
-  <h2>2 - Cookies</h2>
-  <p>Notre site peut utiliser des cookies pour améliorer votre expérience de navigation. Les cookies sont de petits fichiers texte stockés sur votre ordinateur lorsque vous visitez un site web. Ils nous aident à analyser le trafic du site et à personnaliser le contenu en fonction de vos préférences. Vous pouvez configurer votre navigateur pour refuser les cookies, mais cela pourrait affecter certaines fonctionnalités de notre site.</p>
-  <h2>3 - Sécurité</h2>
-  <p>Nous prenons des mesures pour protéger vos informations personnelles contre tout accès non autorisé, utilisation abusive ou divulgation. Cependant, veuillez noter qu'aucune méthode de transmission de données sur Internet ou de stockage électronique n'est totalement sécurisée. Nous ne pouvons donc pas garantir une sécurité absolue.<br>
-    Notre site internet possède bien entendu un Certificat SSL (Secure Socket Layer).
+    Cette politique complète les mentions légales et les Conditions Générales d’Utilisation consultables par les utilisateurs à l’adresse suivante : <a href="https://omniscientdesign.fr" class="black" target="_blank">https://omniscientdesign.fr/mentionslegales</a>
   </p>
-  <h2>4 - Droit d'Accès, de Modification et de Suppression</h2>
-  <p>Vous avez le droit d'accéder, de modifier ou de supprimer les informations personnelles que vous nous avez fournies. Pour cela, veuillez nous contacter à l'adresse suivante : support@viturna.fr. Nous nous efforcerons de répondre à votre demande dans les plus brefs délais.</p>
-  <h2>5 - Politique de l'hébergeur</h2>
-  <p>Notre hébergeur possède sa propre politique de confidentialité concernant l'utilisation de vos données que vous pouvez consulter en tout temps https://www.hostinger.fr/politique-de-confidentialite.</p>
-  <h2>6 - Consentement a notre politique</h2>
-  <p>En utilisant notre site, vous consentez à notre politique de confidentialité et que celle-ci puisse être modifiée en tout temps par l'éditeur.</p>
-  <h2>Modification  de la Politique de Confidentialité</h2>
-  <p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Toute modification prendra effet dès sa publication sur ce site.</p>
-  <% file_path = __FILE__ %>
-  <% if File.exist?(file_path) %>
-    <% last_update = File.mtime(file_path) %>
-    <% formatted_date = last_update.strftime("%d/%m/%Y") %>
-    <p class="date" >Dernière mise à jour : <%= formatted_date %></p>
-  <% else %>
-    <p>Dernière mise à jour : ??/??/????</p>
-  <% end %>
+  <h2>1 - Responsable du traitement des données</h2>
+  <p>
+    Le responsable du traitement des données est : QUEMERE Edgar<br>
+    Adresse : [Adresse complète]<br>
+    Email : [Adresse e-mail]<br>
+    Numéro de téléphone : 06 95 81 77 27
+  </p>
+  <h2>2 - Données collectées</h2>
+  <p>
+    Nous collectons différentes données personnelles selon les interactions que vous avez avec notre site. Les types de données collectées peuvent inclure :<br>
+    <br>
+    <span class="black medium">&nbsp;• Données d'identification :</span> nom, prénom, adresse e-mail, numéro de téléphone, adresse postale, Statut (étudiant, professeur, autre), établissement scolaire.<br>
+    <span class="black medium">&nbsp;• Données de connexion :</span> adresse IP, type de navigateur, fournisseur d’accès Internet, date et heure d’accès, historique de navigation.<br>
+    <span class="black medium">&nbsp;• Données soumises via des formulaires :</span> contenu des messages envoyés via les formulaires ou soumissions de contenu.
+  </p>
+  <h2>3 - Finalités du traitement</h2>
+  <p>
+    Nous collectons et traitons vos données personnelles pour les finalités suivantes :<br>
+    <br>
+    <span class="black medium">&nbsp;• Expérience : </span> analyser l’audience et améliorer l’expérience utilisateur sur notre site.<br>
+    <span class="black medium">&nbsp;• Gestion des comptes utilisateurs :</span> création, maintenance, et gestion des comptes.<br>
+    <span class="black medium">&nbsp;• Modération des contenus :</span> vérification et validation des œuvres et références soumises par les utilisateurs.<br>
+    <span class="black medium">&nbsp;• Communication :</span> envoi d'informations liées au compte et aux activités du Site (notifications, mises à jour, etc.).<br>
+    <span class="black medium">&nbsp;• Sécurité :</span> prévenir et détecter toute activité frauduleuse<br>
+  </p>
+  <h2>4 - Base légale du traitement</h2>
+  <p>
+    Le traitement de vos données personnelles repose sur plusieurs bases légales, notamment :<br>
+    <br>
+    &nbsp;• Votre consentement lorsque vous fournissez volontairement vos informations (formulaire, inscription, etc.).<br>
+    &nbsp;• Notre intérêt légitime à améliorer nos services et à assurer la sécurité de notre site.<br>
+    &nbsp;• Le respect d’une obligation légale lorsque nous devons conserver certaines données pour des raisons fiscales ou juridiques.
+  </p>
+  <h2>5 - Destinataires des données</h2>
+  <p>
+    Vos données personnelles sont strictement confidentielles et ne sont accessibles qu'à des tiers dans les cas suivants :<br>
+    <br>
+    &nbsp;• Sous-traitants : Nous pouvons partager vos données avec des prestataires de services (hébergement, maintenance, marketing, etc.) qui agissent pour notre compte et sous notre contrôle.<br>
+    &nbsp;• Obligations légales : Nous pouvons être amenés à divulguer vos données en cas d'obligation légale (demande d’une autorité judiciaire ou administrative).
+  </p>
+  <h2>6 - Durée de conservation des données</h2>
+  <p>
+    Nous conservons vos données personnelles uniquement pour la durée nécessaire aux finalités pour lesquelles elles ont été collectées, et dans le respect des exigences légales : <br>
+    <br>
+    <span class="black medium">&nbsp;• Données de contact :</span> conservées pour une durée maximale de 3 ans après le dernier contact. <br>
+    <span class="black medium">&nbsp;• Données de navigation (cookies) :</span> conservées pour une durée maximale de 13 mois. <br>
+    <span class="black medium">&nbsp;• Données contractuelles :</span> conservées pendant toute la durée de la relation contractuelle, puis archivées pour la durée légale de conservation. <br>
+    <span class="black medium">&nbsp;• Données soumises par les utilisateurs (contenus utilisateurs) :</span> Les données (textes, images, vidéos, etc.) soumises par les utilisateurs pour alimenter le site sont conservées aussi longtemps que le contenu reste en ligne sur le site. Elles peuvent être supprimées à la demande de l'utilisateur ou automatiquement si le contenu n'est plus pertinent pour le site. Une copie peut être conservée dans les archives pendant une durée de 3 ans après la suppression du contenu pour des raisons de sécurité ou de preuve. <br>
+    <span class="black medium">&nbsp;• Données de connexion (logs) :</span> Les données de connexion (adresses IP, logs de connexion, historique de navigation) sont conservées pendant une durée maximale de 12 mois à des fins de sécurité, conformément à la réglementation applicable. Ces données peuvent être utilisées pour prévenir et détecter les activités frauduleuses ou illicites.
+  </p>
+  <h2>7 - Vos droits</h2>
+  <p>
+    Conformément au RGPD, vous disposez des droits suivants sur vos données personnelles :<br>
+    <br>
+    <span class="black medium">&nbsp;• Droit d'accès :</span> Vous pouvez demander l'accès aux données personnelles que nous détenons à votre sujet.<br>
+    <span class="black medium">&nbsp;• Droit de rectification :</span> Vous pouvez demander la correction de vos données personnelles si elles sont inexactes ou incomplètes.<br>
+    <span class="black medium">&nbsp;• Droit à l'effacement :</span> Vous pouvez demander la suppression de vos données personnelles (sous réserve des obligations légales de conservation).<br>
+    <span class="black medium">&nbsp;• Droit à la limitation :</span> Vous pouvez demander à limiter le traitement de vos données dans certains cas.<br>
+    <span class="black medium">&nbsp;•  Droit à la portabilité :</span> Vous pouvez demander à recevoir vos données personnelles dans un format structuré et lisible par machine.<br>
+    <span class="black medium">&nbsp;• Droit d'opposition :</span> Vous pouvez vous opposer au traitement de vos données pour des raisons tenant à votre situation particulière ou à des fins de marketing direct.
+    Pour exercer vos droits, vous pouvez nous contacter à l'adresse suivante :
+    <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>
+  </p>
+  <h2>8 - Sécurité des données</h2>
+  <p>
+    Nous mettons en œuvre des mesures techniques et organisationnelles appropriées pour assurer la sécurité et la confidentialité de vos données personnelles et éviter qu'elles soient perdues, détournées, altérées, ou consultées sans autorisation.
+  </p>
+  <h2>9 - Politique de l’hébergeur</h2>
+  <p>
+    Notre hébergeur possède sa propre politique de confidentialité concernant l'utilisation de vos données que vous pouvez consulter en tout temps <a href="https://www.hostinger.fr/politique-de-confidentialite" class="black" target="_blank">https://www.hostinger.fr/politique-de-confidentialite</a>.
+  </p>
+  <h2>10. Modifications de la politique de confidentialité</h2>
+  <p>
+    Nous nous réservons le droit de modifier la présente politique de confidentialité à tout moment. Les modifications prendront effet dès leur publication sur cette page. Nous vous recommandons de consulter régulièrement cette page pour rester informé des mises à jour.
+  </p>
+  <h2>11. Contact</h2>
+  <p>
+    Si vous avez des questions ou des préoccupations concernant notre politique de confidentialité ou la manière dont nous traitons vos données personnelles, vous pouvez nous contacter à l'adresse suivante :
+    <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>
+    <br>
+    <br>
+    Le respect de vos droits est notre priorité<br>
+    <span class="black medium">Fondateurs de Omniscient Design</span>
+  </p>
 </section>
