--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -129,3 +129,8 @@
 .circle-back:hover, .circle-save:hover {
   opacity: 0.8;
 }
+#back-btn{
+  background: none;
+  border: none;
+  cursor: pointer;
+}
