--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -71,7 +71,7 @@
   <div class="link-header">
     <%= link_to "Mentions légales", mentionslegales_path%>
     <%= link_to "Politique de confidentialité", politiquedeconfidentialite_path%>
-    <%= link_to "Cookies", cookies_path%>
+    <p><%= link_to "CGU", cgu_path%> | <%= link_to "Cookies", cookies_path%></p>
     <a>©2024 | Omniscient Design</a>
   </div>
 </header>
