--- a/app/views/pages/cgu.html.erb
+++ b/app/views/pages/cgu.html.erb
@@ -5,14 +5,8 @@
   .grid-1{
     padding-bottom: 64px;
   }
-  .grid-1 p{
-    color:#8D9299;
-    font-size: 18px;
-    line-height:130%;
-  }
-  .black{
-    color:#202020;
-  }
+
+
   .date{
     font-weight: 300;
     margin-top: 16px;
@@ -124,11 +118,11 @@
   <p>
     L'Éditeur se réserve le droit de modifier les présentes CGU à tout moment. Les modifications prendront effet dès leur publication sur le Site. Il est conseillé aux Utilisateurs de consulter régulièrement les CGU pour prendre connaissance des éventuelles mises à jour.
   </p>
-  <h2>11. Droit Applicable et Juridiction Compétente</h2>
+  <h2>11 - Droit Applicable et Juridiction Compétente</h2>
   <p>
     Les présentes CGU sont soumises au droit français. En cas de litige non résolu à l'amiable, celui-ci sera soumis à la compétence exclusive des tribunaux français.
   </p>
-  <h2>12. Contact</h2>
+  <h2>12 - Contact</h2>
   <p>
     Pour toute question relative aux présentes CGU, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>
   </p>
