--- a/app/views/pages/politiquedeconfidentialite.html.erb
+++ b/app/views/pages/politiquedeconfidentialite.html.erb
@@ -5,11 +5,7 @@
   .grid-1{
     padding-bottom: 64px;
   }
-  .grid-1 p{
-    color:#8D9299;
-    font-size: 18px;
-    line-height:130%;
-  }
+
   .black{
     color:#202020;
   }
@@ -141,7 +137,7 @@
     <span class="black medium">&nbsp;• Droit de rectification :</span> Vous pouvez demander la correction de vos données personnelles si elles sont inexactes ou incomplètes.<br>
     <span class="black medium">&nbsp;• Droit à l'effacement :</span> Vous pouvez demander la suppression de vos données personnelles (sous réserve des obligations légales de conservation).<br>
     <span class="black medium">&nbsp;• Droit à la limitation :</span> Vous pouvez demander à limiter le traitement de vos données dans certains cas.<br>
-    <span class="black medium">&nbsp;•  Droit à la portabilité :</span> Vous pouvez demander à recevoir vos données personnelles dans un format structuré et lisible par machine.<br>
+    <span class="black medium">&nbsp;• Droit à la portabilité :</span> Vous pouvez demander à recevoir vos données personnelles dans un format structuré et lisible par machine.<br>
     <span class="black medium">&nbsp;• Droit d'opposition :</span> Vous pouvez vous opposer au traitement de vos données pour des raisons tenant à votre situation particulière ou à des fins de marketing direct.
     Pour exercer vos droits, vous pouvez nous contacter à l'adresse suivante :
     <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>
@@ -154,11 +150,11 @@
   <p>
     Notre hébergeur possède sa propre politique de confidentialité concernant l'utilisation de vos données que vous pouvez consulter en tout temps <a href="https://www.hostinger.fr/politique-de-confidentialite" class="black" target="_blank">https://www.hostinger.fr/politique-de-confidentialite</a>.
   </p>
-  <h2>10. Modifications de la politique de confidentialité</h2>
+  <h2>10 - Modifications de la politique de confidentialité</h2>
   <p>
     Nous nous réservons le droit de modifier la présente politique de confidentialité à tout moment. Les modifications prendront effet dès leur publication sur cette page. Nous vous recommandons de consulter régulièrement cette page pour rester informé des mises à jour.
   </p>
-  <h2>11. Contact</h2>
+  <h2>11 - Contact</h2>
   <p>
     Si vous avez des questions ou des préoccupations concernant notre politique de confidentialité ou la manière dont nous traitons vos données personnelles, vous pouvez nous contacter à l'adresse suivante :
     <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>
