--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -25,11 +25,13 @@
   .name{
     font-weight: 500;
     font-size: 30px;
+    color: #FFF;
   }
     .pseudo{
     font-size: 24px;
     letter-spacing:-3%;
     margin-top: 8px;
+      color: #FFF;
   }
   .nav-profil{
     padding: 0 10vw;
