--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -65,13 +65,50 @@
 
 .description-card {
   margin-top: 16px;
-  font-size: 18px;
   color: $text-color;
-  line-height: 125%;
   overflow-wrap: break-word;
 }
 
 .description-card-home {
   overflow: hidden;
   height: 150px;
+}
+@media screen and (max-width: 425px) {
+  .card {
+    padding-top: 100px;
+    width: 90vw;
+  }
+
+  .bg-card {
+    width: 90vw;
+    height: 380px;
+  }
+
+  .bg-card .date-main{
+    top: 24px;
+    scale: 0.8;
+    font-size: 16px;
+  }
+
+
+  .title-card {
+    font-size: 28px;
+  }
+
+  .subtitle-card {
+    font-size: 20px;
+    margin-top: 16px;
+  }
+
+  .container-text-card {
+    padding: 0px;
+  }
+
+  .title-description-card {
+    display: none;
+  }
+
+  .description-card {
+    display: none;
+  }
 }
