--- a/app/views/pages/search_category.html.erb
+++ b/app/views/pages/search_category.html.erb
@@ -232,6 +232,7 @@
     </svg>
   </div>
 <% end %>
+</div>
 <section class="search-elements">
   <% if !params[:domaine].present? %>
     <div class="flex-title">
