--- a/app/views/pages/search_frise.html.erb
+++ b/app/views/pages/search_frise.html.erb
@@ -248,6 +248,7 @@
     </svg>
   </div>
 <% end %>
+</div>
 <section class="search-elements">
   <div class="flex-title">
     <a href="/oeuvres/search">
