--- a/app/views/pages/mentionslegales.html.erb
+++ b/app/views/pages/mentionslegales.html.erb
@@ -76,15 +76,15 @@
     <span class="black medium">Propriétaire du site :</span> <br>
     <br>
     Nom et prénom du propriétaire : QUEMERE Edgar<br>
-    Adresse du propriétaire : <br>
-    Adresse email : <br>
+    Adresse du propriétaire : 49-55 rue Donissan, 33000 Bordeaux <br>
+    Adresse email :  edgar.r6player@gmail.com<br>
     Numéro de téléphone : 06 95 81 77 27<br>
     <br>
     <span class="black medium">Responsable de la publication :</span> <br>
     <br>
     Nom et prénom : QUEMERE Edgar<br>
     Numéro de téléphone : 06 95 81 77 27<br>
-    Adresse email :
+    Adresse email : edgar.r6player@gmail.com
   </p>
   <h2>2 - Hébergement</h2>
   <p>
