--- a/app/views/pages/politiquedeconfidentialite.html.erb
+++ b/app/views/pages/politiquedeconfidentialite.html.erb
@@ -77,13 +77,13 @@
     &nbsp;• Sur les destinataires de ces données personnelles ;<br>
     &nbsp;• Sur la politique du site en matière de cookies.<br>
     <br>
-    Cette politique complète les mentions légales et les Conditions Générales d’Utilisation consultables par les utilisateurs à l’adresse suivante : <a href="https://omniscientdesign.fr" class="black" target="_blank">https://omniscientdesign.fr/mentionslegales</a>
+    Cette politique complète les mentions légales et les Conditions Générales d’Utilisation consultables par les utilisateurs à l’adresse suivante : <a href="https://omniscientdesign.fr" class="black" target="_blank">https://omniscientdesign.fr/mentionslegales</a> et <a href="https://omniscientdesign.fr/cgu" class="black" target="_blank">https://omniscientdesign.fr/cgu</a>
   </p>
   <h2>1 - Responsable du traitement des données</h2>
   <p>
     Le responsable du traitement des données est : QUEMERE Edgar<br>
-    Adresse : [Adresse complète]<br>
-    Email : [Adresse e-mail]<br>
+    Adresse : 49-55 rue Donissan, 33000 Bordeaux<br>
+    Email : edgar.r6player@gmail.com<br>
     Numéro de téléphone : 06 95 81 77 27
   </p>
   <h2>2 - Données collectées</h2>
